--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import ThemeToggle from '../components/ThemeToggle.astro';
+import '../styles/global.css';
+
 export interface Props {
 	title: string;
 }
